--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	<body>
 		<center>
 			<h2>Demos for Tux4ME</h2>
-			<a href="./speed_demo.html">Speed Demo</a>
+			<a href="./speed_demo.html">Speed Demo</a><br>
+			<a href="./reasoning_demo.html">Reasoning Demo</a>
 		</center>
 
 	</body>
